--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_yh.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-20 18:05+0200\n"
-"PO-Revision-Date: 2013-03-23 23:06+0200\n"
+"PO-Revision-Date: 2013-03-23 23:19+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
@@ -1181,7 +1181,7 @@ msgstr "Отправить PDF"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr ""
+msgstr "Пожалуйста подождите..."
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
@@ -7476,7 +7476,7 @@ msgstr "%s отправил вам сообщение:"
 #: ../code/application/views/helpfile/pofields.php:697
 #, php-format
 msgid "Type of dorms"
-msgstr ""
+msgstr "Тип общежития"
 
 #: ../code/application/views/helpfile/pofields.php:698
 #, fuzzy, php-format
@@ -7486,7 +7486,7 @@ msgstr "Спасибо за групповую бронь."
 #: ../code/application/views/helpfile/pofields.php:699
 #, php-format
 msgid "Complete dorm only"
-msgstr ""
+msgstr "Только полное общежитие"
 
 #: ../code/application/views/helpfile/pofields.php:700
 #, php-format
@@ -7495,6 +7495,9 @@ msgid ""
 "the beds in that particular dorm even if you do not need all of them. This "
 "is often used by groups."
 msgstr ""
+"Мы покажем вам только общежития, которые вы сможете полностью забронировать. "
+"Вам нужно будет заказать все кровати, даже если они все не будут "
+"использоваться. Эта опция часто используется группами."
 
 #: ../code/application/views/helpfile/pofields.php:701
 #, fuzzy, php-format
