--- a/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_CA/LC_MESSAGES/auberge_lang.po
@@ -1121,8 +1121,8 @@ msgstr "Fermer"
 msgid ""
 "Mail this page to someone you know, or send it to yourself as a reminder."
 msgstr ""
-"Envoyer cette page à quelqu'un que vous connaissez, ou l'envoyer à vous-même "
-"pour vous en rappeler."
+"Envoyez cette page à quelqu'un que vous connaissez, ou à vous-même pour vous "
+"en rappeler."
 
 #: ../code/application/views/includes/template-share-email-popup.php:44
 #, fuzzy
@@ -7266,7 +7266,7 @@ msgstr "Enterrement de vie de garçon / fille"
 #: ../code/application/views/helpfile/pofields.php:619
 #, php-format
 msgid "Sports group"
-msgstr "Ggroupe de sports"
+msgstr "Groupe de sports"
 
 #: ../code/application/views/helpfile/pofields.php:620
 #, php-format
@@ -7281,7 +7281,7 @@ msgstr "S'il vous plaît, veuillez spécifier un type de groupe."
 #: ../code/application/views/helpfile/pofields.php:622
 #, php-format
 msgid "Please specify an age range for your group."
-msgstr "S'il vous plaît spécifier une plage d'âge pour votre groupe."
+msgstr "S'il vous plaît spécifiez une tranche d'âge pour votre groupe."
 
 #: ../code/application/views/helpfile/pofields.php:623
 #, php-format
@@ -7296,7 +7296,7 @@ msgstr "Commentaires"
 #: ../code/application/views/helpfile/pofields.php:626
 #, php-format
 msgid "Compare"
-msgstr "Comparer"
+msgstr "Comparez"
 
 #: ../code/application/views/helpfile/pofields.php:627
 #, php-format
@@ -7307,8 +7307,7 @@ msgstr " de "
 #, php-format
 msgid "Please see selected properties to compare on top of the page."
 msgstr ""
-"S'il vous plaît voir les propriétés sélectionnées à comparer le haut de la "
-"page."
+"Les propriétés sélectionnées à comparer sont visibles en haut de cette page."
 
 #: ../code/application/views/helpfile/pofields.php:631
 #, php-format
@@ -7323,7 +7322,7 @@ msgstr "Imprimer"
 #: ../code/application/views/helpfile/pofields.php:634
 #, php-format
 msgid "Quick Compare"
-msgstr "Comparaison Rapide"
+msgstr "Comparaison rapide"
 
 #: ../code/application/views/helpfile/pofields.php:635
 #, php-format
@@ -7358,22 +7357,22 @@ msgstr "Résultats"
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Only 5 properties can be compared"
-msgstr "Seulement 5 propriétés peuvent être comparées"
+msgstr "Seulement 5 établissements peuvent être comparées"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
 msgid "Please remove a property from list."
-msgstr "S'il vous plaît supprimer une propriété de la liste."
+msgstr "S'il vous plaît veuillez supprimer un établissement de la liste."
 
 #: ../code/application/views/helpfile/pofields.php:649
 #, php-format
 msgid "Quick Compare (5 properties maximum)"
-msgstr "Comparer rapide (5 propriétés maximum)"
+msgstr "Comparaison rapide (5 établissements maximum)"
 
 #: ../code/application/views/helpfile/pofields.php:650
 #, php-format
 msgid "Remove All"
-msgstr "Supprimer tout"
+msgstr "Supprimez toutes les sélections"
 
 #: ../code/application/views/helpfile/pofields.php:651
 #, php-format
@@ -7400,17 +7399,17 @@ msgstr "Tout remettre a zéro"
 #: ../code/application/views/helpfile/pofields.php:656
 #, php-format
 msgid "Compare (%d out of 5)"
-msgstr "Comparer (%d sur 5)"
+msgstr "Comparez (%d sur 5)"
 
 #: ../code/application/views/helpfile/pofields.php:658
 #, php-format
 msgid "Show More"
-msgstr "Afficher Plus"
+msgstr "Affichez Plus"
 
 #: ../code/application/views/helpfile/pofields.php:659
 #, php-format
 msgid "Show Less"
-msgstr "Afficher Moins"
+msgstr "Affichez Moins"
 
 #: ../code/application/views/helpfile/pofields.php:660
 #: ../code/application/controllers/cmain.php:1665
@@ -7509,7 +7508,7 @@ msgstr "Sélectionnez"
 #: ../code/application/views/helpfile/pofields.php:692
 #, php-format
 msgid "last %d"
-msgstr "les %d dernières "
+msgstr "les %d dernières"
 
 #: ../code/application/views/helpfile/pofields.php:693
 #, php-format
