--- a/languages/ci/locale/fr_FR/LC_MESSAGES/hb_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/hb_lang.po
@@ -1109,7 +1109,7 @@ msgstr "Envoyer un autre message"
 #: ../code/application/views/helpfile/pofields.php:683
 #, php-format
 msgid "Close"
-msgstr "Fermer"
+msgstr "Fermez"
 
 #: ../code/application/views/includes/template-share-email-popup.php:43
 #: ../code/application/views/helpfile/pofields.php:675
@@ -1169,7 +1169,7 @@ msgstr "Oui, je souhaite m'abonner à la newsletter."
 #: ../code/application/views/helpfile/pofields.php:682
 #, php-format
 msgid "Send email"
-msgstr "Envoyer un email"
+msgstr "Envoyez un email"
 
 #: ../code/application/views/includes/template-share-email-popup.php:84
 #, fuzzy
@@ -1178,7 +1178,7 @@ msgstr "Envoyez PDF"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr "Veuillez patienter s'il vous plaît…"
+msgstr "Prosím čekejte…"
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
@@ -3856,7 +3856,7 @@ msgstr "Derniers commentaires"
 #: ../code/application/views/mustache/property_list.php:153
 #: ../code/application/views/mustache/property_list.php:163
 msgid "close"
-msgstr "Fermer"
+msgstr "fermez"
 
 #: ../code/application/views/hw/booking_view.php:18
 #: ../code/application/views/hb/booking_view.php:13
@@ -7212,17 +7212,17 @@ msgstr "Propriété disponible suivante"
 #: ../code/application/views/helpfile/pofields.php:610
 #, php-format
 msgid "Group Type:"
-msgstr "Type de groupe:"
+msgstr "Type de groupe :"
 
 #: ../code/application/views/helpfile/pofields.php:611
 #, php-format
 msgid "Age Ranges:"
-msgstr "Tranches d'âge:"
+msgstr "Tranches d'âge :"
 
 #: ../code/application/views/helpfile/pofields.php:612
 #, php-format
 msgid "Choose one..."
-msgstr "Choisir…"
+msgstr "Choisissez un..."
 
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
@@ -7348,7 +7348,7 @@ msgstr "Résultats"
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Only 5 properties can be compared"
-msgstr "Seulement 5 établissements peuvent être comparées"
+msgstr "Seulement 5 établissements peuvent être comparés"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
@@ -7486,7 +7486,7 @@ msgstr "Nouvelle Recherche"
 #: ../code/application/views/helpfile/pofields.php:690
 #, php-format
 msgid "Search"
-msgstr "Recherche"
+msgstr "Recherchez"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/helpfile/pofields.php:723
@@ -7705,12 +7705,12 @@ msgid ""
 "occupied: 7)."
 msgstr ""
 "1 dortoir complètement disponible et 1 dortoir partiellement occupé (lits "
-"déjà occupés: 7)."
+"déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:735
 #, php-format
 msgid "This dorm is already partially occupied (beds already occupied: 7)."
-msgstr "Ce dortoir est déjà partiellement occupé (lits déjà occupés: 7)."
+msgstr "Ce dortoir est déjà partiellement occupé (lits déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:736
 #, php-format
@@ -7719,7 +7719,7 @@ msgid ""
 "occupied: 7)."
 msgstr ""
 "7 dortoirs complètement disponibles et 1 dortoir partiellement occupé (lits "
-"déjà occupés: 7)."
+"déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:737
 #, php-format
