--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang.po
@@ -949,7 +949,7 @@ msgstr ""
 "logements à bas prix dans des villes comme Paris en France, Londres en "
 "Angleterre, Barcelone en Espagne, New York aux Etats-Unis, Rome en Italie, "
 "Amsterdam en Hollande, Dublin en Irlande, Madrid en Espagne, Prague en "
-"République tchèque ... Préparez votre voyage en toute simplicité, nous "
+"République tchèque … Préparez votre voyage en toute simplicité, nous "
 "proposons également des informations de dernières minutes, des guides et "
 "commentaires."
 
@@ -1109,7 +1109,7 @@ msgstr "Envoyer un autre message"
 #: ../code/application/views/helpfile/pofields.php:683
 #, php-format
 msgid "Close"
-msgstr "Fermer"
+msgstr "Fermez"
 
 #: ../code/application/views/includes/template-share-email-popup.php:43
 #: ../code/application/views/helpfile/pofields.php:675
@@ -1169,7 +1169,7 @@ msgstr "Oui, je souhaite m'abonner à la newsletter."
 #: ../code/application/views/helpfile/pofields.php:682
 #, php-format
 msgid "Send email"
-msgstr "Envoyer un email"
+msgstr "Envoyez un email"
 
 #: ../code/application/views/includes/template-share-email-popup.php:84
 #, fuzzy
@@ -1178,7 +1178,7 @@ msgstr "Envoyez PDF"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr "Veuillez patienter s'il vous plaît…"
+msgstr "Prosím čekejte…"
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
@@ -3514,7 +3514,7 @@ msgstr "Filtres sélectionnés:"
 #: ../code/application/views/helpfile/pofields.php:259
 #, php-format
 msgid "Back to search results"
-msgstr "Retour aux resultats"
+msgstr "Retour aux résultats"
 
 #: ../code/application/views/hw/hostel_view.php:43
 #: ../code/application/views/hb/hostel_view.php:131
@@ -3840,7 +3840,7 @@ msgstr "sécurisé"
 #: ../code/application/views/helpfile/pofields.php:552
 #, php-format
 msgid "Search for more properties in %s"
-msgstr "Rechercher davantage détablissements à %s"
+msgstr "Rechercher davantage rétablissements à %s"
 
 #: ../code/application/views/hw/property_list.php:72
 #: ../code/application/views/hb/property_list.php:129
@@ -3856,7 +3856,7 @@ msgstr "Derniers commentaires"
 #: ../code/application/views/mustache/property_list.php:153
 #: ../code/application/views/mustache/property_list.php:163
 msgid "close"
-msgstr "Fermer"
+msgstr "fermez"
 
 #: ../code/application/views/hw/booking_view.php:18
 #: ../code/application/views/hb/booking_view.php:13
@@ -6646,7 +6646,7 @@ msgid ""
 "districts, train stations and more…"
 msgstr ""
 "1 million de revues réelles, des hôtels avec des petit-déjeuners gratuits, "
-"des cartes, des photos, une recherche par quartiers, gare ou plus..."
+"des cartes, des photos, une recherche par quartiers, gare ou plus…"
 
 #: ../code/application/views/helpfile/pofields.php:434
 #, php-format
@@ -6917,7 +6917,7 @@ msgstr "Sélectioner Carte"
 #: ../code/application/views/helpfile/pofields.php:534
 #, php-format
 msgid "Search by property"
-msgstr "Recherche par établisement"
+msgstr "Recherche par établissement"
 
 #: ../code/application/views/helpfile/pofields.php:535
 #, php-format
@@ -7212,17 +7212,17 @@ msgstr "Propriété disponible suivante"
 #: ../code/application/views/helpfile/pofields.php:610
 #, php-format
 msgid "Group Type:"
-msgstr "Type de groupe:"
+msgstr "Type de groupe :"
 
 #: ../code/application/views/helpfile/pofields.php:611
 #, php-format
 msgid "Age Ranges:"
-msgstr "Tranches d'âge:"
+msgstr "Tranches d'âge :"
 
 #: ../code/application/views/helpfile/pofields.php:612
 #, php-format
 msgid "Choose one..."
-msgstr "Choisir…"
+msgstr "Choisissez un..."
 
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
@@ -7348,7 +7348,7 @@ msgstr "Résultats"
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Only 5 properties can be compared"
-msgstr "Seulement 5 établissements peuvent être comparées"
+msgstr "Seulement 5 établissements peuvent être comparés"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
@@ -7486,7 +7486,7 @@ msgstr "Nouvelle Recherche"
 #: ../code/application/views/helpfile/pofields.php:690
 #, php-format
 msgid "Search"
-msgstr "Recherche"
+msgstr "Recherchez"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/helpfile/pofields.php:723
@@ -7705,12 +7705,12 @@ msgid ""
 "occupied: 7)."
 msgstr ""
 "1 dortoir complètement disponible et 1 dortoir partiellement occupé (lits "
-"déjà occupés: 7)."
+"déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:735
 #, php-format
 msgid "This dorm is already partially occupied (beds already occupied: 7)."
-msgstr "Ce dortoir est déjà partiellement occupé (lits déjà occupés: 7)."
+msgstr "Ce dortoir est déjà partiellement occupé (lits déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:736
 #, php-format
@@ -7719,7 +7719,7 @@ msgid ""
 "occupied: 7)."
 msgstr ""
 "7 dortoirs complètement disponibles et 1 dortoir partiellement occupé (lits "
-"déjà occupés: 7)."
+"déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:737
 #, php-format
