--- a/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
+++ b/languages/ci/locale/fr_FR/LC_MESSAGES/auberge_lang_aj.po
@@ -1112,7 +1112,7 @@ msgstr "Envoyer un autre message"
 #: ../code/application/views/helpfile/pofields.php:683
 #, php-format
 msgid "Close"
-msgstr "Fermer"
+msgstr "Fermez"
 
 #: ../code/application/views/includes/template-share-email-popup.php:43
 #: ../code/application/views/helpfile/pofields.php:675
@@ -1172,7 +1172,7 @@ msgstr "Oui, je souhaite m'abonner à la newsletter."
 #: ../code/application/views/helpfile/pofields.php:682
 #, php-format
 msgid "Send email"
-msgstr "Envoyer un email"
+msgstr "Envoyez un email"
 
 #: ../code/application/views/includes/template-share-email-popup.php:84
 #, fuzzy
@@ -1181,7 +1181,7 @@ msgstr "Envoyez PDF"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr "Veuillez patienter s'il vous plaît…"
+msgstr "Prosím čekejte…"
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
@@ -3858,7 +3858,7 @@ msgstr "Derniers commentaires"
 #: ../code/application/views/mustache/property_list.php:153
 #: ../code/application/views/mustache/property_list.php:163
 msgid "close"
-msgstr "Fermer"
+msgstr "fermez"
 
 #: ../code/application/views/hw/booking_view.php:18
 #: ../code/application/views/hb/booking_view.php:13
@@ -6674,7 +6674,7 @@ msgid ""
 "districts, train stations and more…"
 msgstr ""
 "1 million de revues réelles, des hôtels avec des petit-déjeuners gratuits, "
-"des cartes, des photos, une recherche par quartiers, gare ou plus..."
+"des cartes, des photos, une recherche par quartiers, gare ou plus…"
 
 #: ../code/application/views/helpfile/pofields.php:434
 #, php-format
@@ -7240,17 +7240,17 @@ msgstr "Propriété disponible suivante"
 #: ../code/application/views/helpfile/pofields.php:610
 #, php-format
 msgid "Group Type:"
-msgstr "Type de groupe:"
+msgstr "Type de groupe :"
 
 #: ../code/application/views/helpfile/pofields.php:611
 #, php-format
 msgid "Age Ranges:"
-msgstr "Tranches d'âge:"
+msgstr "Tranches d'âge :"
 
 #: ../code/application/views/helpfile/pofields.php:612
 #, php-format
 msgid "Choose one..."
-msgstr "Choisir…"
+msgstr "Choisissez un..."
 
 #: ../code/application/views/helpfile/pofields.php:613
 #, php-format
@@ -7376,7 +7376,7 @@ msgstr "Résultats"
 #: ../code/application/views/helpfile/pofields.php:647
 #, php-format
 msgid "Only 5 properties can be compared"
-msgstr "Seulement 5 établissements peuvent être comparées"
+msgstr "Seulement 5 établissements peuvent être comparés"
 
 #: ../code/application/views/helpfile/pofields.php:648
 #, php-format
@@ -7514,7 +7514,7 @@ msgstr "Nouvelle Recherche"
 #: ../code/application/views/helpfile/pofields.php:690
 #, php-format
 msgid "Search"
-msgstr "Recherche"
+msgstr "Recherchez"
 
 #: ../code/application/views/helpfile/pofields.php:691
 #: ../code/application/views/helpfile/pofields.php:723
@@ -7733,12 +7733,12 @@ msgid ""
 "occupied: 7)."
 msgstr ""
 "1 dortoir complètement disponible et 1 dortoir partiellement occupé (lits "
-"déjà occupés: 7)."
+"déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:735
 #, php-format
 msgid "This dorm is already partially occupied (beds already occupied: 7)."
-msgstr "Ce dortoir est déjà partiellement occupé (lits déjà occupés: 7)."
+msgstr "Ce dortoir est déjà partiellement occupé (lits déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:736
 #, php-format
@@ -7747,7 +7747,7 @@ msgid ""
 "occupied: 7)."
 msgstr ""
 "7 dortoirs complètement disponibles et 1 dortoir partiellement occupé (lits "
-"déjà occupés: 7)."
+"déjà occupés : 7)."
 
 #: ../code/application/views/helpfile/pofields.php:737
 #, php-format
