--- a/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
+++ b/languages/ci/locale/ru_RU/LC_MESSAGES/auberge_lang_xo.po
@@ -3,10 +3,9 @@ msgstr ""
 "Project-Id-Version: home 2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-20 18:05+0200\n"
-"PO-Revision-Date: 2013-03-16 22:36+0200\n"
+"PO-Revision-Date: 2013-03-27 22:11+0200\n"
 "Last-Translator: Iana <hrapulya@gmail.com>\n"
 "Language-Team: English\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1184,7 +1183,7 @@ msgstr "Отправить PDF"
 
 #: ../code/application/views/includes/template-share-email-popup.php:85
 msgid "Please wait ..."
-msgstr ""
+msgstr "Пожалуйста подождите..."
 
 #: ../code/application/views/includes/template-share-email-popup.php:90
 #: ../code/application/views/helpfile/pofields.php:684
@@ -7483,7 +7482,7 @@ msgstr "%s отправил вам сообщение:"
 #: ../code/application/views/helpfile/pofields.php:697
 #, php-format
 msgid "Type of dorms"
-msgstr ""
+msgstr "Тип общежития"
 
 #: ../code/application/views/helpfile/pofields.php:698
 #, fuzzy, php-format
@@ -7493,7 +7492,7 @@ msgstr "Спасибо за групповую бронь."
 #: ../code/application/views/helpfile/pofields.php:699
 #, php-format
 msgid "Complete dorm only"
-msgstr ""
+msgstr "Только все общежитие"
 
 #: ../code/application/views/helpfile/pofields.php:700
 #, php-format
@@ -7502,6 +7501,9 @@ msgid ""
 "the beds in that particular dorm even if you do not need all of them. This "
 "is often used by groups."
 msgstr ""
+"Мы покажем вам только общежития, которые вы можете полностью забронировать. "
+"Вам нужно будет оплатить все кровати в данном общежитии, даже если вам все "
+"не нужны. Это часто используется группами."
 
 #: ../code/application/views/helpfile/pofields.php:701
 #, fuzzy, php-format
